syntax = "proto3";

package message;

option go_package = "pkg/grpc";

service Message {
  rpc SendMessage (CreateMessageRequest) returns (CreateMessageResponse);
  rpc SendDummyMessage (CreateDummyMessageRequest) returns (CreateDummyMessageResponse);
}

message CreateDummyMessageRequest {
  string name = 1;
  string message = 2;
}

message CreateDummyMessageResponse {
  string message = 1;
}

message CreateMessageRequest {
  string name = 1;
  string message = 2;
}

message CreateMessageResponse {
  uint64 id = 1;
}